Added DB table for blog post comments

--- a/resources/dynamodb-table.yml
+++ b/resources/dynamodb-table.yml
@@ -2,7 +2,7 @@ Resources:
   BlogPostsTable:
     Type: AWS::DynamoDB::Table
     Properties:
-      TableName: ${self:custom.tableName}
+      TableName: ${self:custom.postsTableName}
       AttributeDefinitions:
         - AttributeName: userId
           AttributeType: S
@@ -12,6 +12,24 @@ Resources:
         - AttributeName: userId
           KeyType: HASH
         - AttributeName: blogPostId
+          KeyType: RANGE
+      # Set the capacity based on the stage
+      ProvisionedThroughput:
+        ReadCapacityUnits: ${self:custom.tableThroughput}
+        WriteCapacityUnits: ${self:custom.tableThroughput}
+  BlogPostCommentsTable:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: ${self:custom.commentsTableName}
+      AttributeDefinitions:
+        - AttributeName: blogPostId
+          AttributeType: S
+        - AttributeName: commentId
+          AttributeType: S
+      KeySchema:
+        - AttributeName: blogPostId
+          KeyType: HASH
+        - AttributeName: commentId
           KeyType: RANGE
       # Set the capacity based on the stage
       ProvisionedThroughput:
